# miraj

./: CMakeLists.txt  TODO.txt  lexertests.txt
data/: grammar-old.json  grammar.json  grammar2.json  keywords.txt  punctuators.txt
src/: main.cpp
src/appearance/: beautyengine.cpp  beautyengine.hpp
src/lexer/: lexingengine.cpp  lexingengine.hpp
src/parser/: grammar.cpp  grammar.hpp  parsingengine.cpp  parsingengine.hpp
src/regex/: lexingengine.cpp  lexingengine.hpp  regex.cpp  regex.h
src/structures/: linelist.hpp  structures.cpp  structures.hpp
src/text/: coloredchar.hpp  document.cpp  document.hpp  vvdocument.cpp  vvdocument.hpp
